# Autonoma

./: .env.example  .gitignore  AGENTS.md  Autonoma Intelligent Infrastructure Platform.txt  Makefile  README.md  SECURITY_TESTS.md  agnet-rearch.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/agent_runtime/: Dockerfile
apps/api/: Dockerfile  entrypoint.sh
apps/api/app/: db.py  (+16 more)
apps/plugin_gateway/: Dockerfile
apps/policy/: policy.rego
apps/runtime_orchestrator/: Dockerfile  __init__.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/workflow_adapter/: Dockerfile
contracts/openapi/: action_execution_components.yaml
docs/: SECURITY.md  agent-runtime.md  architecture-compliance.md  architecture-gap-milestones.md  architecture.mmd  auth.md  db-schema.mmd  env-reference.md  gitops.md  handoff.md  milestoanes.md  milestones.md  observability.md  operator-runbook.md  policy.md  production-handbook.md  production-scaling.md  rollback-v1-action-contract.md  system-design.md  user-guide.md  vault-integration.md  vector-store.md  workflows.md
docs/ADR/: 000-template.md
infra/: devtools.Dockerfile  docker-compose.engines.yml  docker-compose.langfuse.yml  docker-compose.otel-langfuse.yml  docker-compose.yml  otel-collector.langfuse.yaml  otel-collector.yaml  prometheus.yml
libs/: __init__.py
scripts/: register_plugins_workflows.sh  smoke.sh  trigger_workflow.sh
tools/: allowlist.json  fetch_url.py  wait_for_vault_seed.py
(+178 files in other folders)
